--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 		<version>2.2.11.RELEASE</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.bciit</groupId>
+	<groupId>com</groupId>
 	<artifactId>Spring-Boot-Service1</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>Spring-Boot-Service1</name>
