--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
-server.servlet.context-path=/service1/resource
-server.port=7010
+server.servlet.context-path=/service1
+server.port=8010
+spring.application.name=service1
+ribbon.eureka.enabled=false
 
 
 ####  H2 Database Properties    ####
