API Gateway zuul

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 server.servlet.context-path=/service1
 server.port=8010
 spring.application.name=service1
-ribbon.eureka.enabled=false
+#ribbon.eureka.enabled=false
+#eureka.client.fetchRegistry=true
 
 
 ####  H2 Database Properties    ####
